# crates-io-release-test

./: .gitignore  Cargo.toml  README.md  crates_io_readme.md  merge-test
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs
