[package]
name = "code-sandwich-crates-io-release-test-macros"
version = "0.1.1"
authors = ["CodeSandwich <igor.zuk@protonmail.com>"]
description = "inner crate test releaase"
license = "MIT"

[lib]
proc-macro = true
doctest = false

[dependencies]
syn = { version = "^0.11.11", features = ["full"] }
quote = "0.3.15"
